# AIIA

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  render.yaml
.cursor/rules/: aiia.mdc
.github/workflows/: build.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  api.ts  chatModes.ts  i18n.ts  ollama-desktop.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: chat.rs  cloud.rs  gemini.rs  lib.rs  main.rs  ollama.rs
apps/desktop/src-tauri/src/updater/: config.rs  deferred.rs  mod.rs  release.rs  utils.rs
apps/desktop/src/components/: AgentSpecEditor.css  AgentSpecEditor.tsx  AiProviderSelect.tsx  ChatMarkdown.tsx  Layout.css  Layout.tsx  OpportunityCard.tsx  ProgressBar.css  ProgressBar.tsx  RunLogViewer.css  RunLogViewer.tsx  UpdateOverlay.css  UpdateOverlay.tsx
apps/desktop/src/contexts/: AgentGenerationContext.tsx
apps/desktop/src/hooks/: useAgents.ts  useAiProvider.tsx
apps/desktop/src/pages/: Chat.css  Chat.tsx  CreateAgent.tsx  Dashboard.tsx  Inbox.tsx  Onboarding.tsx  ReviewAgent.tsx  Runs.tsx  Settings.tsx
crates/aiia-core/: Cargo.toml
crates/aiia-core/src/: crypto.rs  db.rs  error.rs  lib.rs  models.rs  scheduler.rs
crates/aiia-update-helper/: Cargo.toml
crates/aiia-update-helper/src/: main.rs
docs/: agent-spec-schema.md  architecture-cloud-cron.md  architecture.md  development-guide.md  effort-levels.md  prd.md  project-context.md
docs/epics/: README.md  e10-cloud-cron.md  e11-opportunities-news.md  e7-aiia-chat.md  e8-local-parity.md  e9-bfgn-wrap.md
docs/examples/: bfgn-monthly-wrap-prompt.md  bfgn-opportunities-prompt.md  bfgn-sector-news-prompt.md
landing/: config.js  i18n.js  index.html  styles.css
scripts/: bundle-runners.mjs  bundle-runners.ps1  bundle-update-helper.mjs  check-versions.mjs  predev.ps1  probe-search-html.mjs  qa-chat-markdown-links.mjs  qa-chat-search-coverage.mjs  qa-effort-integrity.mjs  qa-newsletter-email.mjs  qa-real-estate-coverage.mjs  qa-serp-resilience.mjs  render-cloud-build.mjs  run-mode-validation.mjs  smoke-chat.mjs  smoke-gemini-client.mjs  validate-research-modes.mjs
services/cloud-scheduler/: .gitignore  README.md  package-lock.json  package.json
services/cloud-scheduler/src/: index.js
