[package]
name = "aiia-core"
version = "0.1.0"
edition = "2021"
description = "AIIA core: database, crypto, scheduler"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13"
dirs = "6"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile = "3"
