[package]
name = "aiia-desktop"
version = "0.1.0"
description = "AIIA - Local AI search agents"
authors = ["AIIA"]
edition = "2021"

[lib]
name = "aiia_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aiia-core = { path = "../../../crates/aiia-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
