[package]
name = "aiia-desktop"
version = "0.1.26"
description = "AIIA - Local AI chat and search agents"
authors = ["AIIA"]
edition = "2021"

[lib]
name = "aiia_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aiia-core = { path = "../../../crates/aiia-core" }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tokio = { version = "1", features = ["full", "process", "io-util"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
regex = "1"
base64 = "0.22"
